Swapped overflow values for x / y to avoid scroll bugs, added inherit to header to capture offset of parent.

--- a/src/scss/_core.scss
+++ b/src/scss/_core.scss
@@ -5,9 +5,10 @@
 .panels {
   height: 100%;
   margin: 0;
+  overflow-x: hidden;
 
   &.is_active {
-    overflow: hidden;
+    overflow-y: hidden;
   }
 }
 
